--- a/src/static/scss/slider/slider.scss
+++ b/src/static/scss/slider/slider.scss
@@ -25,7 +25,6 @@
   left: -500%;
   width: 100%;
   z-index: 2;
-  text-align: center;
   @include transform(translateZ(0));
 
   // Скрытие всех слайдов, кроме первого
